[package]
name = "themis"
version = "0.0.1"
authors = ["rust-themis developers"]
description = "High-level cryptographic services for storage and messaging"
homepage = "https://www.cossacklabs.com/themis/"
repository = "https://github.com/ilammy/rust-themis"
readme = "README.md"
keywords = ["crypto", "Themis"]
categories = ["cryptography", "api-bindings"]
license = "Apache-2.0"

[badges]
travis-ci = { repository = "ilammy/rust-themis" }

[dependencies]
libc = "0.2"

[dev-dependencies]
clap = "2.32"
log = "0.4.5"
env_logger = "0.5.13"
