[package]
name = "libthemis-sys"
version = "0.0.1"
authors = ["rust-themis developers"]
description = "FFI binding to libthemis"
homepage = "https://www.cossacklabs.com/themis/"
repository = "https://github.com/ilammy/rust-themis"
readme = "README.md"
keywords = ["crypto", "Themis"]
categories = ["cryptography", "api-bindings"]
license = "Apache-2.0"
links = "themis"

[badges]
travis-ci = { repository = "ilammy/rust-themis" }

[build-dependencies]
bindgen = "0.42.0"
