[package]
name = "libthemis-sys"
version = "0.0.2-1"
edition = "2018"
authors = ["rust-themis developers"]
description = "FFI binding to libthemis"
homepage = "https://www.cossacklabs.com/themis/"
repository = "https://github.com/ilammy/rust-themis"
readme = "README.md"
keywords = ["crypto", "Themis"]
categories = ["cryptography", "external-ffi-bindings"]
license = "Apache-2.0"
links = "themis"

[badges]
travis-ci = { repository = "ilammy/rust-themis" }

[features]
vendored = ["libthemis-src"]

[build-dependencies]
bindgen = "0.42.0"
cc = "1.0"
libthemis-src = { path = "../libthemis-src", version = "=0.0.2-1", optional = true }
pkg-config = "0.3.14"

[package.metadata.docs.rs]
features = "vendored"
dependencies = ["libssl-dev"]
